{IB - 14} Dodanie Api z CalendarLiturg i wyswietlanie 3 dni kalendarzowych

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/intention_book
 spring.datasource.username=postgres
 spring.datasource.password=kanapka
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 #----------------------------------
 #               Hibernate
